Added route to add a new property, including schema validation, api documentation and code documentation
